# assist

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  compose.yaml  pyproject.toml
src/aissist/: app.py  auth.py  models.py  runner.py  store.py
src/assist/: app.py  auth.py  events.py  models.py  preferences.py  realms.py  runner.py  scheduler.py  store.py
web/: index.html  package-lock.json  package.json
web/src/: AgentForm.tsx  App.tsx  ChatArea.tsx  MemberPicker.tsx  PreferencesForm.tsx  Sidebar.tsx  TopBar.tsx  api.ts  index.css
