[project]
name = "assist"
version = "0.1.0"
description = "Multi-agent platform built on Google ADK"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.7.2",
    "google-adk>=1.33.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.30.0",
    "croniter>=6.0.0",
]

[project.scripts]
assist = "assist.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assist"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "types-croniter>=6.2.2.20260518",
]
